--- a/Blog Project/views/new-post.ejs
+++ b/Blog Project/views/new-post.ejs
@@ -3,7 +3,6 @@
 <div class="container mt-5">
 <h1 class="mb-4 text-center">NEW POST</h1>
 
-
 <form action="/create-post" method="post">
 <div class="form-group">
     <label for="title">Title</label>
@@ -12,6 +11,10 @@
 <div class="form-group">
     <label for="text">Text</label>
     <textarea class=form-control name="text"  cols="30" rows="10" required></textarea>
+</div>
+<div class="form-group">
+    <label for="author">Author</label>
+    <input type="text" class="form-control" name="author" required>
 </div>
 <button type="submit" class="btn btn-secondary">Create Post</button>
 </form>
