Edit and delete post

--- a/Blog Project/views/edit-post.ejs
+++ b/Blog Project/views/edit-post.ejs
@@ -16,7 +16,7 @@
         <label for="author">Author</label>
         <input type="text" class="form-control" name="author" required  value="<%= post.author %>">
     </div>
-    <button type="submit" class="btn btn-secondary">Edit Post</button>
+    <button type="submit" class="btn btn-secondary mt-4">Edit Post</button>
     </form>
     </div>
     
