--- a/Blog Project/views/new-post.ejs
+++ b/Blog Project/views/new-post.ejs
@@ -16,7 +16,7 @@
     <label for="author">Author</label>
     <input type="text" class="form-control" name="author" required>
 </div>
-<button type="submit" class="btn btn-secondary">Create Post</button>
+<button type="submit" class="btn btn-secondary mt-4">Create Post</button>
 </form>
 </div>
 
