--- a/Blog Project/views/details.ejs
+++ b/Blog Project/views/details.ejs
@@ -13,8 +13,10 @@
             <p> by <%= post.author %></p>
           </blockquote>
           <div style="float: right">
-            <a href="/edit-post/<%= post.id %>" class="card-link">Edit</a>
-            <a href="/delete-post" class="card-link">Delete</a>
+            <a href="/edit-post/<%= post.id %>" class="card-link btn btn-primary">Edit</a>
+            <button type="button" class="card-link btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
+              Delete
+            </button>
           </div>
         </div>
       </div>
@@ -23,5 +25,26 @@
 </div>
 
 
+<!-- Delete Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1"  aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog" ">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title fs-5" id="deleteModalLabel">Confirm Delete</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this post?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <form action="/delete-post/<%= post.id %>" method="post">
+          <button type="submit" class="btn btn-danger">Delete</button>
+      </form>
+      </div>
+    </div>
+  </div>
+</div>
 
 <%- include("partials/footer.ejs") %>
